--- a/Documents/bp_sirljan_2012/reference.bib
+++ b/Documents/bp_sirljan_2012/reference.bib
@@ -76,6 +76,14 @@
   url = "http://exist-db.org"
 }
 
+@ONLINE{ibm:unittesting,
+  author = "{Pat Eyler}",
+  title = "Test-first programming with Ruby",
+  cited = "16.\,5.\,2012",
+  year =         2012,
+  url = "http://www.ibm.com/developerworks/opensource/tutorials/os-ruby1/section4.html"
+}
+
 @Book{UML,
   author =      "Martin Fowler",
   title =        "Destilované UML",
