--- a/Documents/bp_sirljan_2012/5_testovani.tex
+++ b/Documents/bp_sirljan_2012/5_testovani.tex
@@ -6,8 +6,12 @@
 \end{itemize} 
 
 
-Testování bylo zaměřeno pouza na funkcionalitu. Vynecháno bylo testování rychlosti, práce s operační pamětí, spotřeby procesorového času. 
+Testování bylo zaměřeno pouza na funkcionalitu. Vynecháno bylo testování rychlosti, práce s operační pamětí, spotřeby procesorového času. Testoval jsem unit testama za pomocí Ruby modulu \verb|Test::Unit| a informací z knihy Ruby - kompendium znalostí \cite{Ruby} a online tutoriálu \cite{ibm:unittesting}.
+Test Coverage TODO
 
+\section{RubyACL}
+Testoval jsem každou veřejnou metodu u RubyACL. Celkem jsem vytvořil 43 testů s 119 asercema. Testy jsem rozdělil do 4 částí-souborů podle charakteru metod, které testují. Set1 testuje metody přímo spjaté s ACL, například load, save and rename. Set2 testuje metody, které vytváří ACL objekty. Set3 testuje metody, které upravují ACL objekty. Set4 testuje pouze metodu check.
+Testování probíhá neobvykle delší dobu, protože před každým spuštěním nového testu se do databáze nahrávájí testovací dokumenty a po každém testu se maže kolekce s testovacími daty. Hlavně nahrávání dokumentů probíhá poměrně dlouhou dobu. Čas provedení testů trvá asi 80 sekund.
 
 \section{eXistAPI}
-\section{RubyACL}
+Testoval jsem každou veřejnou metodu eXistAPI. Celkem jsem vytvořil 14 testů s 21 asercema. 
